change image_ingress endpoint to return response from get_image_vulnerabilities instead. this will allow us to check for regressions when grype integration is done.

update ImageIngressResponse to include image vuln data
