# anchore_engine/services/policy_engine/swagger/swagger.yaml
@@ -1041,7 +1041,7 @@ definitions:
         description: "The url to pull image data from, if available. If None the system will ask the catalog endpoint"
   ImageIngressResponse:
     type: object
-    description: "Indicates if the operation was accepted or not"
+    description: "Indicates if the operation was accepted or not, also includes vulnerability report"
     properties:
       status:
         type: string
@@ -1049,6 +1049,8 @@ definitions:
         - accepted
         - failed
         - loaded
+      vulnerability_report:
+        $ref: "#/definitions/ImageVulnerabilityListing"
   PolicyEvaluation:
     type: object
     description: 'A policy bundle evaluation result for a specific image, tag, policy tuple'
